# mofa

./: .gitignore  CNAME  Dockerfile.simple  README.md  README_cn.md  Start.md  run_linux_container.sh
cli/: CMakeLists.txt  Main.cpp
euterpe/: keyframes.txt  pyproject.toml
euterpe/.github/instructions/: general_refactor_guidelines.instructions.md
euterpe/euterpe/: __init__.py  api.py  config_loader.py  main_workflow.py  models.py
euterpe/euterpe/enhancers/: __init__.py  dify_client.py
euterpe/euterpe/generators/: __init__.py  image_module.py  music_module.py  video_assembler.py
euterpe/euterpe/processors/: __init__.py  keyframe_rules.py
euterpe/euterpe/utils/: __init__.py
euterpe/euterpe/vendors/: __init__.py
euterpe/src/: dify_enhancer.py  keyframe_processor.py  music_generator.py
euterpe/tests/: README.md  test_models.py  test_workflow.py
mae/agent-hub/beauty-context/: pyproject.toml
mae/agent-hub/content-evaluation/: pyproject.toml
mae/agent-hub/evaluation-judge/: pyproject.toml
mae/agent-hub/query-assistant/: README.md  pyproject.toml
mae/agent-hub/reasoner/: pyproject.toml
mofa-xmind/: AgentFlow.md  CMakeLists.txt  README.md  xmcli.md
mofa-xmind/Design/: ChatGPTResult.json
mofa-xmind/Docker/: Dockerfile  Dockerfile.multiarch  update_xlang_env.sh
mofa-xmind/Documents/: composite_agent.md  install_xlang_env.md  mofa_action.md  mofa_agent.md  mofa_agent_graph.md  mofa_programming_guide.md  property_graph.md
mofa-xmind/Documents/git-code/: notebook_tutorial.md
mofa-xmind/Examples/Hello_World/: hello_word.yml  llmPool.yml
mofa-xmind/Examples/PySimple/: simple.py  simple.yml
mofa-xmind/Examples/Routing/: ConversationalFlowOrchestrator.yml
mofa-xmind/Examples/Simple/: simple.yml
mofa-xmind/Main/: CMakeLists.txt  main.cpp
mofa-xmind/Main/AgentGraph/: AgentGraph.h  AgentGroup.h  BaseAction.h  BaseAgent.cpp  BaseAgent.h  BufferedProcessor.h  Callable.cpp  Callable.h  Function.h  PropScope.h  README.md  XMindCmd.cpp  XMindCmd.h
mofa-xmind/Main/Common/: CantorWait.h  Locker.cpp  gthread.cpp  gthread.h
mofa-xmind/Main/Executor/: AgentGraphParser.cpp  LlmPool.cpp  LlmPool.h  NodeManager.h  Session.h  start.cpp  start.h
mofa-xmind/Main/Inc/: singleton.h
mofa-xmind/Main/Log/: log.cpp  log.h
mofa-xmind/Main/Memory/: entity.h  storyboard.h
mofa-xmind/Main/Planner/: README.md
mofa-xmind/Prompts/: xlang.md
mofa-xmind/Schema/: README.md  compositeAgent.yml  library.yml  llmPool.yml  singleAgent.yml
mofa-xmind/Scripts/: keystore.x  xMind.py
mofa-xmind/Service/: agent_service.x  main.x
mofa-xmind/Service/webpages/: chat.html  chat2.html  editGraph.html  showGraph.html  xmind_chat.html
mofa-xmind/Test/: agentflow.yml  from_python_agent_test.py  from_python_test.py  ipc_simple_python_test.py  ipc_simple_test.x  ipc_test.x  test.x  test_graph_loop.x  test_lib.py
mofa-xmind/cli/Scripts/: cli.x
python/: .gitignore  MANIFEST.in  README.md  README_cn.md  openapi_letta.json  openapi_openai.json  pyproject.toml  requirements.txt  setup.py
python/agent-hub/111/: README.md  README_cn.md  pyproject.toml
python/agent-hub/CountryInfoAgent/: README.md  pyproject.toml
python/agent-hub/GrpcUpperController/: README.md  pyproject.toml
python/agent-hub/LLMRequestNode/: README.md  pyproject.toml
python/agent-hub/MemoryAugmentedChatAssistant/: README.md  pyproject.toml
python/agent-hub/RealTimeCryptoPriceAgent/: README.md  pyproject.toml
python/agent-hub/add-numbers/: README.md  pyproject.toml
python/agent-hub/add-numbers_copy/: pyproject.toml  qqq
python/agent-hub/add-numbers_copy_copy/: README.md  pyproject.toml
python/agent-hub/add-numbers_copy_copy_copy/: README.md  pyproject.toml
python/agent-hub/agent-code-generator/: 1.py  pyproject.toml
python/agent-hub/agent-code-generator_copy/: README.md  pyproject.toml
python/agent-hub/agent-config-generator/: pyproject.toml
python/agent-hub/agent-deepresearch-planning/: .gitignore  README.md  pyproject.toml
python/agent-hub/agent-dependency-generator/: pyproject.toml
python/agent-hub/agent-template/: cookiecutter.json  pyproject.toml
python/agent-hub/agent1/: pyproject.toml
python/agent-hub/autogen-agent/: README.md  pyproject.toml
python/agent-hub/beauty-context/: pyproject.toml
python/agent-hub/browser-use-connector/: README.md  pyproject.toml
python/agent-hub/camera-screenshot/: pyproject.toml
python/agent-hub/content-evaluation/: pyproject.toml
python/agent-hub/create-agent-config/: pyproject.toml
python/agent-hub/create-agent-folder/: pyproject.toml
python/agent-hub/create-agent-main/: pyproject.toml
python/agent-hub/create-agent-require/: pyproject.toml
python/agent-hub/deep-inquire/: README.md  README_cn.md  pyproject.toml
python/agent-hub/deep-search/: README.md  README_cn.md  pyproject.toml
python/agent-hub/deepseek/: pyproject.toml
python/agent-hub/euterpe-agent/: DOCUMENTATION.md  EXAMPLES.md  README.md  TECHNICAL.md  euterpe_dataflow.yml  example_input.json  pyproject.toml
python/agent-hub/firecrawl-agent/: pyproject.toml
python/agent-hub/freepublic-apis/: pyproject.toml
python/agent-hub/gosim-agent/: main.py
python/agent-hub/gosim-pedia/: Matt White - PyTorch.md  PEDIA.md  gosim_search.py  pyproject.toml  speech.py
python/agent-hub/gosim-rag/: pyproject.toml
python/agent-hub/hello-world/: README.md  README_cn.md  pyproject.toml
python/agent-hub/image2video/: README.md  image2video_dataflow.yml  pyproject.toml
python/agent-hub/keyframe-agent/: pyproject.toml
python/agent-hub/kling-agent/: pyproject.toml
python/agent-hub/kling-agent-image/: README.md  pyproject.toml
python/agent-hub/kling-agent-video/: .gitignore  pyproject.toml
python/agent-hub/letta-agent/: README.md  description.json  pyproject.toml
python/agent-hub/llm/: pyproject.toml
python/backup/: README.md  README_en.md  README_zh.md  prompt.md
python/docker/: Dockerfile_x86  README.md
python/docs/: Competition-Process.md
python/documents/: README.md  README_cn.md  build_agent.md  优化建议.md
python/mofa/: __init__.py  cli.py
(+2019 files in other folders)
