[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euterpe-creator"
version = "0.1.0"
description = "A Python library to orchestrate AI-driven video generation from keyframes."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "video generation", "generative art", "keyframes", "multimedia"]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.22.0",
    "pillow>=9.0.0",
    "pytest>=8.3.5",
    "anyio>=4.5.2",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0", 
    "ruff>=0.0.0",
    "mypy>=1.0.0",
]

# Note: beatoven_ai and klingdemo libraries are now directly integrated 
# into the euterpe package as vendor modules and no longer need to be 
# installed separately

[project.urls]
"Homepage" = "https://github.com/yourusername/euterpe-creator"
"Bug Tracker" = "https://github.com/yourusername/euterpe-creator/issues"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
