[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mofa"
version = "0.1.0"
description = "Modular Framework for AI Applications"
authors = ["zonghuan.wu@gmail.com","chenzi00103@gmail.com"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/moxin-org/mofa"
repository = "https://github.com/moxin-org/mofa"
keywords = ["AI", "Framework", "Modular"]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
sphinx = "8.0.2"
sphinx-rtd-theme = "0.5.1"
pytest = "8.3.3"
pytest-cov = "5.0.0"
pyrootutils = "1.0.4"
pre-commit = "3.8.0"
twine = "5.1.1"
wheel = ">=0.41.3"
coverage = "7.6.1"
furo = "2024.8.6"
myst-parser = "4.0.0"
pytest-mock = "3.14.0"
pendulum = "3.0.0"

[tool.poetry.group.date.dependencies]
openpyxl = "3.1.5"
attrs = ">=23.1.0,<24"

[tool.poetry.group.path.dependencies]
pathlib = "1.0.1"

[tool.poetry.group.web.dependencies]
streamlit = "1.39.0"

[tool.poetry.group.log.dependencies]
loguru = "0.7.2"
prettytable = "3.11.0"

[tool.poetry.group.ai-tools.dependencies]
langchain-openai = "0.1.25"
langchain-community = "0.2.17"
langchain_cohere = "0.1.9"
langchain_postgres = "0.0.12"
openai = "*"
duckduckgo-search = "6.2.13"
whisper = "1.1.10"
arxiv = "2.1.3"

[tool.poetry.group.server.dependencies]
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.db.dependencies]
psycopg = "3.2.3"
psycopg-binary = "3.2.3"
langchain-chroma = "*"
chromadb = "*"


[tool.poetry.group.data.dependencies]
pydantic = "2.9.2"
numpy = "1.26.4"
pandas = "2.2.3"
pypdf = "4.3.1"
pyarrow = "17.0.0"
unstructured = "0.15.13"
python-docx = "1.1.2"
python-magic = "0.4.27"
python-pptx = "1.0.2"
docx2txt = "0.8"
markdown = "3.7"

[tool.poetry.group.graph-database.dependencies]
neo4j = "5.25.0"

[tool.poetry.group.agent.dependencies]
crewai = "0.67.1"
crewai-tools = "0.12.1"
dspy-ai = "2.5.3"

[tool.poetry.group.distributed.dependencies]
dora-rs = "*"

[tool.poetry.group.stock.dependencies]
yfinance = "0.2.44"

[tool.poetry.group.embedding.dependencies]
sentence-transformers = "3.1.1"
transformers = "4.45.1"

[tool.poetry.group.ultralytics.dependencies]
ultralytics = "8.3.5"

[tool.poetry.group.web-scraper.dependencies]
scrapegraphai = "*"