[tool.poetry]
name = "query-assistant"
version = "0.1.1"
authors = [
    "ZhongHuan Wu ",
    "Cheng Chen",
]
description = "A simple agent for answering queries"
license = "MIT License"
homepage = "https://github.com/moxin-org/Moxin-App-Engine"
documentation = "https://github.com/moxin-org/Moxin-App-Engine/mae/agent-hub/query-assistant/README.md"
readme = "README.md"
packages = [{ include = "query_assistant" }]

[tool.poetry.dependencies]
numpy = "< 2.0.0"
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
query-assistant = "query_assistant.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
readme = "README.md"
