[tool.poetry]
name = "111"
version = "0.1.1"
authors = [
    "Cheng Chen <chenzi00103@gmail.com>",
]
description = "A simple 111 template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "hello_world" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
111 = "hello_world.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


