[tool.poetry]
name = "add-numbers_copy_copy"
version = "0.1.1"
authors = [
    "ZongHuan Wu ",
    "Cheng Chen",
    
]
description = "A simple add-numbers_copy_copy template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "add_numbers" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
add-numbers_copy_copy = "add_numbers.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

#[project]
#readme = "README.md"
