[tool.poetry]
name = "agent-code-generator"
version = "0.1.1"
authors = [
    "ZongHuan Wu ",
    "Cheng Chen",
]
description = "A simple agent-code-generator template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "agent_code_generator" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
agent-code-generator = "agent_code_generator.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

