[tool.poetry]
name = "agent-deepresearch-planning"
version = "0.1.1"
authors = [
    "Qi Liu",
]
description = "deep inquire"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/mem0ai/mem0"
readme = "README.md"
packages = [{ include = "agent_deepresearch_planning" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
firecrawl = "*"
openai = "*"

[tool.poetry.scripts]
agent-deepresearch-planning = "agent_deepresearch_planning.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

