[tool.poetry]
name = "agent-dependency-generator"
version = "0.1.1"
authors = [
    "ZongHuan Wu ",
    "Cheng Chen",
]
description = "A simple create-agent-config template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "agent_dependency_generator" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
toml = "*"

[tool.poetry.scripts]
agent-dependency-generator = "agent_dependency_generator.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

