[tool.poetry]
name = "agent1"
version = "0.1.1"
authors = [
    "ZongHuan Wu ",
    "Cheng Chen",
]
description = "A simple agent1 template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "agent1" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
rich = "*"

[tool.poetry.scripts]
agent1 = "agent1.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

