[tool.poetry]
name = "autogen-agent"
version = "0.1.1"
authors = [
    "ZongHuan Wu ",
    "Cheng Chen",
]
description = "A simple autogen-agent template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "autogen_agent" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
autogen-agentchat = "*"
autogen-ext = {extras = ["openai"], version = "*"}



[tool.poetry.scripts]
autogen-agent = "autogen_agent.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


