[tool.poetry]
name = "browser-use-connector"
version = "0.0.1"
authors = [
    "Zonghuan Wu"
]
description = "A user new agent template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "browser_use_connector" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
browser-use = "0.1.40"

[tool.poetry.scripts]
browser-use-connector = "browser_use_connector.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

