[tool.poetry]
name = "camera-screenshot"
version = "0.1.1"
authors = [
    "ZongHuan Wu ",
    "Cheng Chen",
]
description = "A simple camera-screenshot "
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "camera_screenshot" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
opencv-python = "*"
[tool.poetry.scripts]
camera-screenshot = "camera_screenshot.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
readme = "README.md"
