[tool.poetry]
name = "create-agent-config"
version = "0.1.1"
authors = [
    "ZongHuan Wu ",
    "Cheng Chen",
]
description = "A simple create-agent-config template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "create_agent_config" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
create-agent-config = "create_agent_config.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

