[tool.poetry]
name = "deep-search"
version = "0.1.1"
authors = [
    "Cheng Chen",
]
description = "deep inquire"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/mem0ai/mem0"
readme = "README.md"
packages = [{ include = "deep_search" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
python-dotenv = "*"
openai = "*"

[tool.poetry.scripts]
deep-search = "deep_search.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

