[tool.poetry]
name = "deepseek"
version = "0.1.1"
authors = [
    "ZongHuan Wu ",
    "Cheng Chen",
]
description = "A simple deepseek template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "deepseek" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
openai = "*"

[tool.poetry.scripts]
deepseek = "deepseek.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


