[tool.poetry]
name = "firecrawl-agent"
version = "0.1.1"
authors = [
    "Cheng Chen",
]
description = "Use firecrawl "
license = "MIT License"
homepage = "https://github.com/mendableai/firecrawl"
documentation = "https://github.com/mendableai/firecrawl"
readme = "README.md"
packages = [{ include = "firecrawl_agent" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
firecrawl = "*"

[tool.poetry.scripts]
firecrawl-agent = "firecrawl_agent.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


